optimize amount of request on loading class properties

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -15,6 +15,6 @@
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
     <accordion-heading>{{property | translateLabel}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
-    <property-view property="property" context="context"></property-view>
+    <property-view property="property" context="context" ng-if="isOpen[property['@id']]"></property-view>
   </accordion-group>
 </accordion>
