cleaner naming in predicateview

--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -1,10 +1,10 @@
 <div class="model-view__title" translate>Name</div>
-<div>{{property | translateLabel}}</div>
-<div ng-show="property.comment">
+<div>{{predicate | translateLabel}}</div>
+<div ng-show="predicate.comment">
   <div class="model-view__title" translate>Description</div>
-  <div>{{property.comment | translateValue}}</div>
+  <div>{{predicate.comment | translateValue}}</div>
 </div>
 <div class="model-view__title" translate>Type</div>
-<div>{{property['@type']}}</div>
+<div>{{predicate['@type']}}</div>
 <div class="model-view__title" translate>Range</div>
-<div>{{property.range}}</div>
+<div>{{predicate.range}}</div>
