fix forminput for non-translatable content

--- a/src/components/templates/formInput.html
+++ b/src/components/templates/formInput.html
@@ -1,4 +1,5 @@
-<div ng-show="inputController.hasContentForLanguage() || formController.visible()">
+<div ng-show="inputController.hasContent() || formController.visible()">
   <div class="model-view__title">{{inputController.title}}</div>
-  <div editable-text="inputController.content[inputController.getLanguage()]">{{inputController.content | translateValue}}</div>
+  <div editable-text="inputController.plainText" ng-if="inputController.plainText">{{inputController.plainText}}</div>
+  <div editable-text="inputController.content[inputController.getLanguage()]" ng-if="!inputController.plainText">{{inputController.content | translateValue}}</div>
 </div>
