custom editor controller for class id

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -2,7 +2,7 @@
   <h2>
     <form-input content="class.label"></form-input>
   </h2>
-  <form-input title="{{'Id' | translate}}" plain-text="class['@id']"></form-input>
+  <form-id title="{{'Id' | translate}}" plain-text="class['@id']"></form-id>
   <div ng-show="class.subClassOf">
     <div class="model-view__title">Superclass</div>
     <div>{{class.subClassOf}}</div>
