add id editing for attributes

--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,5 +1,6 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
+  <form-id title="{{'Id' | translate}}" plain-text="attribute['@id']"></form-id>
   <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
   <form-select title="{{'Range' | translate}}" content="attribute.range" values="attributeValues"></form-select>
   <div class="model-view__title" translate>Is defined by</div>
