--- a/src/components/templates/propertyView.html
+++ b/src/components/templates/propertyView.html
@@ -3,7 +3,7 @@
     <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
     <form-input title="{{'Description' | translate}}" content="property.comment"></form-input>
     <form-input title="{{'Example' | translate}}" content="property.example"></form-input>
-    <form-input title="{{'Datatype' | translate}}" plain-text="property.datatype" ng-if="predicate['@type'] == 'owl:DatatypeProperty'"></form-input>
+    <form-select title="{{'Datatype' | translate}}" content="property.datatype" ng-if="predicate['@type'] == 'owl:DatatypeProperty'" values="attributeValues"></form-select>
     <form-input title="{{'Value class' | translate}}" plain-text="property.valuesClass" ng-if="predicate['@type'] == 'owl:ObjectProperty'"></form-input>
   </editable-form>
   <uib-accordion>
