--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -42,7 +42,7 @@
   </uib-tabset>
 </div>
 <div class="model-panel--right">
-  <class-view class-id="class['@id']" ng-if="class"></class-view>
+  <class-view class-id="class['@id']" model-id="modelId" ng-if="class"></class-view>
   <attribute-view attribute="attribute" ng-if="attribute"></attribute-view>
   <association-view association="association" ng-if="association"></association-view>
 </div>
