initial attribute saving
changing id and adding missing attributes doesn’t work

--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,4 +1,4 @@
-<editable-form>
+<editable-form onAfterSave="updateAttribute()">
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
   <form-id title="{{'Id' | translate}}" plain-text="attribute['@id']"></form-id>
   <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
