--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -1,4 +1,4 @@
-<editable-form onAfterSave="updateClass()">
+<editable-form on-submit="updateClass()" on-reset="resetModel()">
   <h2>
     <form-input content="class.label"></form-input>
   </h2>
