Move add property to its own directive for access to editable form

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -11,7 +11,7 @@
   <div>{{class.isDefinedBy}}</div>
   <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
   <form-input title="{{'PrefLabel' | translate}}" content="class.prefLabel"></form-input>
-  <button type="button" class="btn btn-default" ng-click="addProperty()" ng-if="isLoggedIn()">Add property</button>
+  <add-property></add-property>
   <uib-accordion close-others="false">
     <uib-accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
       <uib-accordion-heading>{{property | translateLabel}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></uib-accordion-heading>
