Class comment editing as text area, still has copy-paste with form input

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -9,7 +9,7 @@
   </div>
   <div class="model-view__title">Is defined by</div>
   <div>{{class.isDefinedBy}}</div>
-  <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
+  <form-text-area title="{{'Description' | translate}}" content="class.comment"></form-text-area>
   <form-input title="{{'PrefLabel' | translate}}" content="class.prefLabel"></form-input>
   <add-property></add-property>
   <uib-accordion close-others="false">
