Allow on only one open accordion at a time

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -12,7 +12,7 @@
   <form-text-area title="{{'Description' | translate}}" content="class.comment"></form-text-area>
   <form-input title="{{'PrefLabel' | translate}}" content="class.prefLabel"></form-input>
   <add-property></add-property>
-  <uib-accordion close-others="false">
+  <uib-accordion close-others="true">
     <uib-accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
       <uib-accordion-heading>{{property | translateLabel}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></uib-accordion-heading>
       <property-view property="property" context="context" ng-if="isOpen[property['@id']]"></property-view>
