crude reference showing

--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -9,6 +9,7 @@
   <div>{{model['@id']}}</div>
 </editable-form>
 
+<references-view references="model.references"></references-view>
 
 <div class="model-panel--left">
   <uib-tabset>
