--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -10,6 +10,7 @@
 </editable-form>
 
 <references-view references="model.references"></references-view>
+<requires-view requires="model.requires"></requires-view>
 
 <div class="model-panel--left">
   <uib-tabset>
