--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,10 @@
 @import './vendor/angular-xeditable-0.1.8/css/xeditable';
 @import './components/templates/model';
 
+[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body {
   padding: 10px;
 }
