--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -1,50 +1,50 @@
-<h2>
-  {{model | translateLabel}}
-</h2>
+<div ng-if="!ctrl.loading">
 
-<editable-form>
-  <form-input title="{{'Label' | translate}}" content="model.label"></form-input>
-  <form-input title="{{'Comment' | translate}}" content="model.comment"></form-input>
-  <div class="model-view__title" translate>Id</div>
-  <div>{{model['@id']}}</div>
-</editable-form>
+  <h2>
+    {{ctrl.model | translateLabel}}
+  </h2>
 
-<references-view references="model.references"></references-view>
-<requires-view requires="model.requires"></requires-view>
+  <model-view model="ctrl.model"></model-view>
 
-<div class="model-panel--left">
-  <uib-tabset>
-    <uib-tab heading="{{'Classes' | translate}}">
-      <ul class="panel__list">
-        <li ng-repeat="class in classes | orderByLabel"
-            ng-class="activeClass == $index ? 'model-panel__selection' : ''"
-            ng-click="activateClass(class, $index)">
-          {{class | translateLabel}}
-        </li>
-      </ul>
-    </uib-tab>
-    <uib-tab heading="{{'Attributes' | translate}}">
-      <h3>Attributes</h3>
-      <ul class="panel__list">
-        <li ng-repeat="attribute in attributes | orderByLabel"
-            ng-class="activeAttribute == $index ? 'model-panel__selection' : ''"
-            ng-click="activateAttribute(attribute, $index)">
-          {{attribute | translateLabel}}
-        </li>
-      </ul>
-      <h3>Associations</h3>
-      <ul class="panel__list">
-        <li ng-repeat="association in associations | orderByLabel"
-            ng-class="activeAssociation == $index ? 'model-panel__selection' : ''"
-            ng-click="activateAssociation(association, $index)">
-          {{association | translateLabel}}
-        </li>
-      </ul>
-    </uib-tab>
-  </uib-tabset>
-</div>
-<div class="model-panel--right">
-  <class-view class-id="class['@id']" ng-if="class"></class-view>
-  <attribute-view attribute="attribute" ng-if="attribute"></attribute-view>
-  <association-view association="association" ng-if="association"></association-view>
+  <references-view references="ctrl.model.references"></references-view>
+  <requires-view requires="ctrl.model.requires"></requires-view>
+
+  <div class="model-panel--left">
+    <uib-tabset>
+      <uib-tab heading="{{'Classes' | translate}}">
+        <ul class="panel__list">
+          <li ng-repeat="class in ctrl.classes | orderByLabel"
+              ng-class="{'model-panel__selection': ctrl.isClassActivated(class)}"
+              ng-click="ctrl.activateClass(class)">
+            {{class | translateLabel}}
+          </li>
+        </ul>
+      </uib-tab>
+      <uib-tab heading="{{'Attributes' | translate}}">
+        <h3>Attributes</h3>
+        <ul class="panel__list">
+          <li ng-repeat="attribute in ctrl.attributes | orderByLabel"
+              ng-class="{'model-panel__selection': ctrl.isAttributeActivated(attribute)}"
+              ng-click="ctrl.activateAttribute(attribute)">
+            {{attribute | translateLabel}}
+          </li>
+        </ul>
+        <h3>Associations</h3>
+        <ul class="panel__list">
+          <li ng-repeat="association in ctrl.associations | orderByLabel"
+              ng-class="{'model-panel__selection': ctrl.isAssociationActivated(association)}"
+              ng-click="ctrl.activateAssociation(association)">
+            {{association | translateLabel}}
+          </li>
+        </ul>
+      </uib-tab>
+    </uib-tabset>
+  </div>
+
+  <div class="model-panel--right">
+    <class-view id="ctrl.activatedClassId" ng-if="ctrl.activatedClassId"></class-view>
+    <attribute-view id="ctrl.activatedAttributeId" ng-if="ctrl.activatedAttributeId"></attribute-view>
+    <association-view id="ctrl.activatedAssociationId" ng-if="ctrl.activatedAssociationId"></association-view>
+  </div>
+
 </div>
