--- a/src/components/templates/propertyView.html
+++ b/src/components/templates/propertyView.html
@@ -2,7 +2,7 @@
   <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
   <form-input title="{{'Description' | translate}}" content="property.comment"></form-input>
   <form-input title="{{'Example' | translate}}" content="property.example"></form-input>
-  <form-select title="{{'Datatype' | translate}}" content="property.datatype" ng-if="predicate['@type'] == 'owl:DatatypeProperty'" values="attributeValues"></form-select>
+  <form-select title="{{'Datatype' | translate}}" content="property.dataType" ng-if="predicate['@type'] == 'owl:DatatypeProperty'" values="attributeValues"></form-select>
   <form-input title="{{'Value class' | translate}}" plain-text="property.valuesClass" ng-if="predicate['@type'] == 'owl:ObjectProperty'"></form-input>
   <uib-accordion>
     <uib-accordion-group is-open="isOpen[property.predicate]">
