Styling and simplification of add property

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,12 @@
   display: none !important;
 }
 
+.add-property {
+  > p {
+    max-width: 600px;
+  }
+}
+
 a.accordion-toggle {
   outline: 0;
 }
