--- a/src/components/templates/addProperty.html
+++ b/src/components/templates/addProperty.html
@@ -11,19 +11,39 @@
   </p>
 
   <div class="row">
+
     <div class="col-md-4">
-      Hakukenttä
+      <div class="input-group input-group-lg">
+        <input autofocus type="text" class="form-control" placeholder="Hae ominaisuutta..."
+               ng-model="ctrl.searchText"
+               ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
+               ng-change="ctrl.search()" />
+        <i class="glyphicon glyphicon-search form-control-feedback"></i>
+      </div>
     </div>
+
+    <div class="col-md-4" style="overflow-y: scroll; height:400px;">
+      <div ng-if="ctrl.searchResults">
+        <div ng-repeat="(type, predicates) in ctrl.searchResults">
+          <h4>{{type | translate}}</h4>
+          <div ng-repeat="predicate in predicates">
+            <div class="search-result" ng-click="ctrl.selectPredicate(predicate)">
+              <h5>{{predicate | translateLabel}}</h5>
+              <p>{{predicate['@id']}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-4">
-      Hakutulokset
+      <predicate-view ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate"></predicate-view>
     </div>
-    <div class="col-md-4">
-      Valittu ominaisuus
-    </div>
+
   </div>
 </div>
 
 <div class="modal-footer">
   <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Peruuta</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.addProperty()" ng-disabled="!ctrl.isAttributeSelected()" translate>Käytä ominaisuutta</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.addProperty()" ng-disabled="!ctrl.selectedPredicate" translate>Käytä ominaisuutta</button>
 </div>
