--- a/src/app.scss
+++ b/src/app.scss
@@ -51,6 +51,15 @@
     border: none;
     border-radius: 4px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+
+    &.selected {
+      background-color: #ffffff;
+    }
+
+    > i {
+      float: right;
+      padding: 5px;
+    }
   }
 }
 
