--- a/src/components/templates/addProperty.html
+++ b/src/components/templates/addProperty.html
@@ -16,23 +16,19 @@
       <div class="input-group input-group-lg">
         <input autofocus type="text" class="form-control" placeholder="Hae ominaisuutta..."
                ng-model="ctrl.searchText"
-               ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-               ng-change="ctrl.search()" />
+               ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
         <i class="glyphicon glyphicon-search form-control-feedback"></i>
       </div>
     </div>
 
     <div class="col-md-4" style="overflow-y: scroll; height:400px;">
-      <div ng-if="ctrl.searchResults">
-        <div ng-repeat="(type, predicates) in ctrl.searchResults">
-          <h4>{{type | translate}}</h4>
-          <div ng-repeat="predicate in predicates">
-            <div class="search-result" ng-click="ctrl.selectPredicate(predicate)">
-              <h5>{{predicate | translateLabel}}</h5>
-              <p>{{predicate['@id']}}</p>
-            </div>
+      <div ng-repeat="predicate in ctrl.searchResults() track by predicate['@id']">
+          <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
+            <i ng-class="ctrl.iconClass(predicate)"></i>
+            <h5>{{predicate | translateLabel}}</h5>
+            <p>{{predicate.comment | translateValue}}</p>
+            <p>{{predicate.isDefinedBy | translateLabel}}</p>
           </div>
-        </div>
       </div>
     </div>
 
