--- a/src/app.scss
+++ b/src/app.scss
@@ -45,20 +45,25 @@
     width: 100%;
   }
 
-  .search-result {
-    cursor: pointer;
-    background-color: #f5f5f5;
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  .search-results {
+    overflow-y: scroll;
+    height: 400px;
 
-    &.selected {
-      background-color: #ffffff;
-    }
+    .search-result {
+      cursor: pointer;
+      background-color: #f5f5f5;
+      border: none;
+      border-radius: 4px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 
-    > i {
-      float: right;
-      padding: 5px;
+      &.selected {
+        background-color: #ffffff;
+      }
+
+      > i {
+        float: right;
+        padding: 5px;
+      }
     }
   }
 }
