--- a/src/components/templates/addProperty.html
+++ b/src/components/templates/addProperty.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-md-4" style="overflow-y: scroll; height:400px;">
+    <div class="col-md-4 search-results">
       <div ng-repeat="predicate in ctrl.searchResults() track by predicate['@id']">
           <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
             <i ng-class="ctrl.iconClass(predicate)"></i>
