--- a/src/components/templates/searchPredicate.html
+++ b/src/components/templates/searchPredicate.html
@@ -59,5 +59,5 @@
 
 <div class="modal-footer">
   <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Peruuta</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.addProperty()" ng-disabled="!ctrl.selectedPredicate" translate>{{ctrl.confirmButtonText}}</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedPredicate" translate>{{ctrl.confirmButtonText}}</button>
 </div>
