--- a/src/components/templates/searchPredicateModal.html
+++ b/src/components/templates/searchPredicateModal.html
@@ -5,9 +5,9 @@
   </h4>
 </div>
 
-<div class="modal-body add-property">
+<div class="modal-body search-modal">
   <p>
-    Haen ensin tarvitsemaasi tietokomponenttia yhtenetoimivuuden kuvauksista. Jos et löydä tarpeisiisi sopivaa, voit luoda uuden tietokomponentin.
+    Haen ensin tarvitsemaasi ominaisuutta yhteentoimivuuden kuvauksista. Jos et löydä tarpeisiisi sopivaa, voit luoda uuden ominaisuuden.
   </p>
 
   <div class="row">
