--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -1,13 +1,12 @@
 <div ng-if="!ctrl.loading">
 
-  <h2>
-    {{ctrl.model | translateLabel}}
-  </h2>
-
-  <model-view model="ctrl.model"></model-view>
-
-  <references-view references="ctrl.model.references"></references-view>
-  <requires-view requires="ctrl.model.requires"></requires-view>
+  <uib-accordion>
+    <uib-accordion-group heading="{{ctrl.model | translateLabel}}" is-open="true">
+      <model-view model="ctrl.model"></model-view>
+      <references-view references="ctrl.model.references"></references-view>
+      <requires-view requires="ctrl.model.requires"></requires-view>
+    </uib-accordion-group>
+  </uib-accordion>
 
   <div class="bottom">
     <div class="model-panel--left">
