--- a/src/components/templates/referencesView.html
+++ b/src/components/templates/referencesView.html
@@ -1,7 +1,8 @@
 <h4 translate>References</h4>
 
 <uib-accordion>
-  <uib-accordion-group ng-repeat="reference in references" heading="{{reference.title | translateValue}}">
+  <uib-accordion-group ng-repeat="reference in references" is-open="isOpen[reference['dct:identifier']]">
+    <uib-accordion-heading>{{reference.title | translateValue}} <span class="glyphicon pull-right" ng-class="{'glyphicon-chevron-down': isOpen[reference['dct:identifier']], 'glyphicon-chevron-right': !isOpen[reference['dct:identifier']]}"></span></uib-accordion-heading>
     <div class="model-view__title" translate>Type</div>
     <div>{{reference['@type']}}</div>
     <div class="model-view__title" translate>Identifier</div>
