Default button instead of warning

--- a/src/components/templates/editInProgressModal.html
+++ b/src/components/templates/editInProgressModal.html
@@ -10,6 +10,6 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-warning" type="button" ng-click="ctrl.ok()" translate>Kyllä</button>
+  <button class="btn btn-default" type="button" ng-click="ctrl.ok()" translate>Kyllä</button>
   <button class="btn btn-primary" type="button" ng-click="ctrl.cancel()" translate>Peruuta</button>
 </div>
